2012-12-13  Antoine Labour  <piman@chromium.org>

        [chromium] Add WebPluginContainer::setWebLayer to supersede setBackingTextureId/setBackingIOSurfaceId
        https://bugs.webkit.org/show_bug.cgi?id=104875

        Reviewed by James Robinson.

        * public/WebPluginContainer.h:
        (WebKit):
        (WebPluginContainer):
        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::setWebLayer):
        (WebKit):
        (WebKit::WebPluginContainerImpl::setBackingTextureId):
        (WebKit::WebPluginContainerImpl::setBackingIOSurfaceId):
        (WebKit::WebPluginContainerImpl::commitBackingTexture):
        (WebKit::WebPluginContainerImpl::setOpaque):
        (WebKit::WebPluginContainerImpl::platformLayer):
        (WebKit::WebPluginContainerImpl::WebPluginContainerImpl):
        (WebKit::WebPluginContainerImpl::~WebPluginContainerImpl):
        * src/WebPluginContainerImpl.h:
        (WebPluginContainerImpl):

2012-12-13  Yusuf Ozuysal  <yusufo@google.com>

        Check whether a touchDown lands on a registered touch event handler from the compositor
        https://bugs.webkit.org/show_bug.cgi?id=104863

        Reviewed by James Robinson.

        * src/WebCompositorInputHandlerImpl.cpp:
        (WebKit::WebCompositorInputHandlerImpl::handleInputEventInternal):

2012-12-07  Levi Weintraub  <leviw@chromium.org>

        Add support for tracking hit test rectangles to enable fast event rejection in the compositor
        https://bugs.webkit.org/show_bug.cgi?id=103914

        Reviewed by Simon Fraser.

        Enabling touch event target region tracking.

        * features.gypi:
        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::requestTouchEventType):
        (WebKit::WebPluginContainerImpl::~WebPluginContainerImpl):

2012-12-12  Andy Estes  <aestes@apple.com>

        Fix the Chromium build after r137539.

        * src/ScrollbarGroup.cpp: