@@ -1,3 +1,13 @@
+2012-12-13  Antoine Labour  <piman@chromium.org>
+
+        [chromium] Small fixes for WebPluginContainer::setWebLayer
+        https://bugs.webkit.org/show_bug.cgi?id=104953
+
+        Reviewed by James Robinson.
+
+        * DumpRenderTree/chromium/TestRunner/src/WebTestPlugin.cpp: Clean up
+        dangling pointers, force correct invalidation of the layer.
+
 2012-12-13  Eric Seidel  <eric@webkit.org>
 
         Add --profiler=PROFILER option to run-perf-tests to allow specifying which profiler to use on platforms with many
