@@ -1,5 +1,16 @@
 2012-12-13  Antoine Labour  <piman@chromium.org>
 
+        [chromium] Small fixes for WebPluginContainer::setWebLayer
+        https://bugs.webkit.org/show_bug.cgi?id=104953
+
+        Reviewed by James Robinson.
+
+        * src/WebPluginContainerImpl.cpp:
+        (WebKit::WebPluginContainerImpl::~WebPluginContainerImpl): Allow
+        WebPlugin to clean up dangling pointers.
+
+2012-12-13  Antoine Labour  <piman@chromium.org>
+
         [chromium] Add WebPluginContainer::setWebLayer to supersede setBackingTextureId/setBackingIOSurfaceId
         https://bugs.webkit.org/show_bug.cgi?id=104875
 
